# scientific-papers-ocr

./: .env  .gitignore  LICENCE  NOTICE  README.md  generate_edocs.py  generate_rich_documents.py  pyproject.toml  rich_document_to_markdown.py  rich_document_to_notion.py
extract_OCR/: main.py  main_nougat.py
extract_OCR/elaborate_mmd_to_edoc/: elaborate_batch_mmd_scientific.py  elaborate_single_mmd_scientific.py
extract_OCR/extraction_elaboration/: check_single_page.py  check_transcription.py  pdf_page_layout.py  static_method_classes.py
extract_OCR/helper_classes/: extract_metadata_from_document.py  nougat_model_configs.py
helper_functions/: helpers_for_main.py
notion_interface/: notion_cli.py
notion_interface/basics/: configs.py  constants.py
notion_interface/markdown_to_notion/: markdown_to_notion_blocks.py  mathpix_to_katex.py
notion_interface/notion_databases/: database.py  reference_database.py  scientific_database.py
notion_interface/pages/: notion_page_handler.py  scientific_page_handler.py
rich_docs/: edocument_class.py
rich_docs/helper_classes/: basic.py  paper_sections.py
rich_docs/references/: base.py  elaborator_class.py
